# mpris2-zbus

./: Cargo.toml
examples/: list.rs
src/: bindings.rs  error.rs  lib.rs  media_player.rs  metadata.rs  player.rs  playlist.rs  playlists.rs  track.rs  track_list.rs
src/bindings/: media_player.rs  player.rs  playlist.rs  track_list.rs
src/playlists/: ordering.rs
