[package]
name = "mpris2-zbus"
description = "zbus-based bindings for MPRIS2 (Media Player Remote Interfacing Specification) on Linux"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
thiserror = "1.0.30"
zbus = "2.1.1"

[dev-dependencies]
miette = { version = "4.3.0", features = ["fancy"] }
tokio = { version = "1.17.0", features = ["full"] }
